# inkbound-dps

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: release.yml
inkbound-parser/: Cargo.toml
inkbound-parser/src/: aspects.rs  lib.rs  testparse.rs
inkbound-parser/src/parser/: loggers.rs  logparser.rs  mod.rs  playerstats.rs
logreader/: Cargo.toml
logreader/src/: lib.rs  logreader.rs
main/: Cargo.toml
main/src/: main.rs
overlay/: Cargo.toml
overlay/src/: lib.rs  options.rs  overlay.rs  test_storage.ron  updater.rs
overlay/src/windows/: extractors.rs  group_damage.rs  group_stats.rs  history.rs  individual_damage.rs  main_menu.rs  mod.rs  settings.rs  skill_totals.rs  stat_table.rs
parser-overlay/: Cargo.toml
parser-overlay/src/: eframe_impl.rs  egui_overlay_impl.rs  lib.rs  overlay.rs
parser-overlay/src/windows/: group_damage.rs  individual_damage.rs  main_menu.rs  mod.rs
updater/: Cargo.toml
updater/src/: lib.rs
