[workspace]
resolver = "2"
members = [
  "main",
  "inkbound-parser",
  "logreader",
  "overlay",
  "updater",
]

[workspace.dependencies]
inkbound-parser = { path = "./inkbound-parser" }
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }

[patch.crates-io]
egui = { git = "https://github.com/richteer/egui", branch = "eframe-overlay-0.24.1" }
eframe = { git = "https://github.com/richteer/egui", branch = "eframe-overlay-0.24.1" }

## Uncomment to use a local development egui
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[profile.dev.package.inkbound-parser]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
