[package]
name = "inkbound-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "3.0.2"
lazy_static = "1.4.0"
log.workspace = true
regex = "1.10.2"
serde.workspace = true
serde_json = "1.0.107"
