[package]
name = "main"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "inkbound-dps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
inkbound-parser.workspace = true
log.workspace = true
notify = "6.1.1"
overlay = { version = "0.1.0", path = "../overlay" }
updater = { version = "0.1.0", path = "../updater" }
