[package]
name = "main"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "inkbound-dps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
inkbound-parser.workspace = true
log.workspace = true
logreader = { version = "0.1.0", path = "../logreader" }
overlay = { version = "0.1.0", path = "../overlay" }
updater = { version = "0.1.0", path = "../updater", optional = true }

[features]
default = []
auto_update = ["dep:updater", "overlay/auto_update"]
