[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_plot = "0.23.0"
inkbound-parser.workspace = true
log.workspace = true
serde.workspace = true

eframe = { version = "0.23.0", features = ["persistence"] }
mouse_position = "0.1.3"
ron = "0.8.1"

