[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
egui_plot = "0.24.1"
inkbound-parser.workspace = true
log.workspace = true
serde.workspace = true
strum.workspace = true

eframe = { version = "0.24.1", features = ["persistence"] }
mouse_position = "0.1.3"
ron = "0.8.1"

updater = { version = "0.1.0", path = "../updater", optional = true }
egui_commonmark = {version = "0.10.1", optional = true }
typetag = "0.2.14"

[features]
default = []
auto_update = ["dep:updater", "dep:egui_commonmark"]
