[package]
name = "parser-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_plot = "0.23.0"
inkbound-parser.workspace = true
log.workspace = true

eframe = { version = "0.23.0", features = ["persistence"], optional = true }
egui_render_three_d = { version = "0.5.1", optional = true }
egui_window_glfw_passthrough = { version = "0.5.1", optional = true }
egui_overlay = { version = "0.5.1", optional = true }
mouse_position = "0.1.3"

[features]
default = []
use_eframe = ["dep:eframe"]
use_egui_overlay = ["dep:egui_render_three_d", "dep:egui_window_glfw_passthrough", "dep:egui_overlay"]

