[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log.workspace = true
self_update = { version = "0.39.0", features = ["archive-zip", "compression-zip-deflate"] }
